--- a/www/assets/stylesheets/style.css
+++ b/www/assets/stylesheets/style.css
@@ -1,3 +1,14 @@
-.greet_input {
-  margin: 5px;
+body, html {
+    height: 100%;
+}
+#main {
+    height: 100%;
+    font-weight: 500;
+    line-height: 31px;
+    text-transform: uppercase;
+}
+#main span {
+    padding: 5px;
+    background-color: #0084D1;
+    color: #FFF;
 }
